# hex8

./: .bw.yaml  README.md  pyproject.toml  site.yaml
.github/composites/shell/: action.yaml
.github/workflows/: ci.yaml
infra/config/: module.py
infra/interfaces/: module.py
infra/tools/: compilers.py  git.py  libs.py  objstore.py  python.py  pythonsite.txt  simulators.py
infra/transforms/: lint.py
infra/workflows/: lint.py
leaf/hex8/v1/: README.md  module.yaml  testbench.yaml
leaf/hex8/v1/design/rtl/: h8_core.v
leaf/hex8/v1/design/types/: h8_pkg.py
leaf/hex8/v1/verif/simple_tb/: testbench.v
leaf/hex8/v1/verif/tb/: __init__.py  testbench.py
leaf/hex8/v1/verif/tb/common/byte_memory/: __init__.py  driver.py  io.py  model.py  monitor.py  transaction.py
leaf/hex8/v1/verif/tb/common/hex8/: __init__.py  model.py  state.py  tracer.py
leaf/hex8/v1/verif/tb/testcases/: __init__.py  smoke.py
projects/: v1.yaml
tech/memory/sim/design/rtl/: ram_1rw.v
