[tool.poetry]
name = "hex8"
version = "1.0.0"
description = "Building a simple CPU in a robust way"
authors = ["Peter Birch <peter@intuity.io>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blockwork = {git = "https://github.com/blockwork-eda/blockwork.git", rev = "c3d84038847945402d79b6d6a51ca4f9a11cb93b"}
awscli = "^1.32.44"
boto3 = "<=1.34.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
